# CrackDetection

./: README.md  pyproject.toml  requirements.txt  run_building_pipeline.sh  run_pipeline.sh
src/crack_detection/: __init__.py  __main__.py  cli.py  config.py  data.py  detector.py  pipeline.py  preprocessing.py  visualization.py
tests/: test_pipeline_config.py
