[project]
name = "crack-detection"
version = "0.1.0"
description = "Modular crack detection pipeline for digital image processing"
authors = [{name = "Semih Sarikoca"}]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "typer>=0.12",
    "pillow>=10.0",
]

[project.optional-dependencies]
development = [
    "pytest>=8.0",
    "black>=24.3",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
